--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     
             <h1>Mahi Jain</h1>
             <p>BBA Student at IIM Bangalore | CA Intermediate</p>
+            <p style="font-size: 16px;">Motivated and dynamic individual currently pursuing BBA in Digital Business and Entrepreneurship
+at IIM Bangalore, along with CA Intermediate from ICAI. Demonstrates a strong foundation in
+leadership, event coordination, and project management. Experienced in team collaboration and
+strategic planning through Student Council leadership. Skilled in Microsoft Office, accounting, and
+freelance writing. A confident communicator with a creative mindset and a drive to innovate and
+succeed in entrepreneurial environments.</p>
             <a href="#education" class="button">View My Profile</a>
         </div>
     </section>
